--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,13 +1,13 @@
 spring.application.name=oauthexample
 
 # GitHub Login
-spring.security.oauth2.client.registration.github.client-id=Ov23livpwAqsSZRcK9ax
-spring.security.oauth2.client.registration.github.client-secret=959ddd6676a3929575dcfb972a3ddd4a35d9c532
+spring.security.oauth2.client.registration.github.client-id=
+spring.security.oauth2.client.registration.github.client-secret=
 
 # Google Login
 # https://console.cloud.google.com/
 
-spring.security.oauth2.client.registration.google.client-id=907635872543-ea7584khgid3p9vdgpus7g1ai8tpjv3l.apps.googleusercontent.com
-spring.security.oauth2.client.registration.google.client-secret=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
+spring.security.oauth2.client.registration.google.client-id=
+spring.security.oauth2.client.registration.google.client-secret=
 
 logging.level.org.springframework.security=TRACE
